<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_stop">Stop</string>
    <string name="add_master">Server</string>
    <string name="title_activity_main">Scratch littlebits</string>
	<string name="entrada">Entrada</string>
	<string name="d0">d0</string>
	<string name="d1">d1</string>
	<string name="d5">d5</string>
	<string name="d9">d9</string>
	<string name="a1">a1</string>
	<string name="a0">a0</string>
	<string name="salida">Salida</string>
	<string name="sust">LittleBits</string>
	<string name="servidor">Servidor</string>
	<string name="conectar">Conectar</string>
			
</resources>
